--- a/dual.html
+++ b/dual.html
@@ -104,7 +104,7 @@
 					<tr>
 						<td class="fx">
 							<div class="img">
-								<img src="img/shib.svg" alt="meme">
+								<img src="img/arb.svg" alt="meme">
 								<img src="img/usdt.svg" alt="usdt">
 							</div>
 							<div class="title">
