--- a/index.html
+++ b/index.html
@@ -175,6 +175,120 @@
 						<td>93,400</td>
 						<td>65,000</td>
 					</tr>
+					<tr>
+						<td></td>
+						<td>0x937...35d</td>
+						<td>281,975</td>
+						<td>50,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x236...155</td>
+						<td>260,240</td>
+						<td>50,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0xb3e...2d2</td>
+						<td>248,660</td>
+						<td>50,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x28c...901</td>
+						<td>237,300</td>
+						<td>30,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x8e6...c7f</td>
+						<td>224,980</td>
+						<td>30,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x4aa...ee7</td>
+						<td>214,880</td>
+						<td>30,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0xca2...878</td>
+						<td>213,116</td>
+						<td>30,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x08c...007</td>
+						<td>187,560</td>
+						<td>30,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x46d...0f6</td>
+						<td>157,060</td>
+						<td>20,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td> 0xda6...63f</td>
+						<td>154,160</td>
+						<td>20,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x2d6...40c</td>
+						<td>111,470</td>
+						<td>20,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0xe01...b60</td>
+						<td>101,140</td>
+						<td>20,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0xbf8...074</td>
+						<td>94,530</td>
+						<td>20,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0xfb5...139</td>
+						<td>92,340</td>
+						<td>10,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x58c...aab</td>
+						<td>82,140</td>
+						<td>10,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x660...b22</td>
+						<td>77,460</td>
+						<td>10,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x34a...9cb</td>
+						<td>74,940</td>
+						<td>10,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0xa8f...d8e</td>
+						<td>70,880</td>
+						<td>10,000</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>0x897...610</td>
+						<td>65,860</td>
+						<td>10,000</td>
+					</tr>
 				</tbody>
 			</table>
 
